Tooltip: fixed z-index bug

--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  z-index: var(--z-index-default);
 }
 
 /*  Removes default margin and padding */
